--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ Description: TBD
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/lmuenter/moody
+BugReports: https://github.com/lmuenter/moody/issues
