--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/lmuenter/moody
 BugReports: https://github.com/lmuenter/moody/issues
+RoxygenNote: 7.1.1
