added `{shiny}` as dependency in DESCRIPTION and NAMESPACE. Avoided use of library() inside package (no hidden dependencies please)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,4 @@ LazyData: true
 URL: https://github.com/lmuenter/moody
 BugReports: https://github.com/lmuenter/moody/issues
 RoxygenNote: 7.1.1
+Imports: shiny
